--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/user-event": "^14.4.3",
     "antd": "^5.6.0",
     "apexcharts": "^3.35.5",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.6",
     "history": "^5.3.0",
